--- a/app/components/person-details.component.html
+++ b/app/components/person-details.component.html
@@ -7,10 +7,13 @@
     </p>
   </section>
   <section>
-    <form>
-      <div>
-        <label for="name">Name: </label>
-        <input type="text" name="name" required [(ngModel)]="person.name" #name>
+    <form (ngSubmit)="savePersonDetails()" #personForm="ngForm">
+        <div>
+            <label for="name">Name: </label>
+            <input type="text" name="name" required [(ngModel)]="person.name" #name="ngModel">
+            <div [hidden]="name.valid || name.pristine" class="error">
+                Name is required my good sir/lady!
+            </div>
       </div>
       <div>
         <label for="weight">Weight: </label>
@@ -20,6 +23,13 @@
         <label for="height">Height: </label>
         <input type="number" name="height" [(ngModel)]="person.height">
       </div>
+      <div>
+        <label for="profession">Profession:</label>
+        <select name="profession" [(ngModel)]="person.profession">
+          <option *ngFor="let profession of professions" [value]="profession">{{profession}}</option>
+        </select>
+      </div>
+      <button type="submit" [disabled]="!personForm.form.valid">Save</button>
     </form>
   </section>
 
